# OpenGL-Cherno

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  ReadMe.md
conan/: Dependencies.cmake  conanfile.py
conan/profiles/macos/: brew-gcc  brew-llvm
src/: CMakeLists.txt  GLProgram.cpp  GLProgram.hpp  cherno.cpp  cherno.h  main.cpp  opengl-cherno.cpp  opengl-cherno.h  othermain.cpp
src/ChernoGL/Program/: Program.cpp  Program.hpp
src/ChernoGL/Shader/: Shader.cpp  Shader.hpp
src/ChernoGL/Vertex/: Vertex.hpp
src/GLProgram/: GLProgram.cpp  GLProgram.hpp
src/OpenGL/Program/: Program.cpp
src/OpenGL/Shader/: Shader.cpp  Shader.hpp
src/ProgramInterface/: ProgramInterface.hpp
src/Shaders/: fragment.shader  vertex.shader
src/Utils/: GLCall.cpp  GLCall.hpp
test_package/: conanfile.py
